@@ -7,7 +7,6 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 =head2 Changes in Devel::NYTProf 2.11
 
 XXX subroutine profiler docs need update
-XXX handling of BEGIN's e.g., Perl::Critic::Document (1.105) line 325
 XXX add u key to treemap to trigger moving 'up' a level
 XXX add "calls N subs" to treemap mouseover box
 XXX string eval merging - must allow at least viewing of source for called subs defined in a nested eval
@@ -63,6 +62,8 @@ Changes to subroutine profiler:
     linking of call trees. Previously only the calling file and line
     were recorded. (This is more significant than it sounds :)
   Added docs describing how the subroutine profiler works.
+  Multiple BEGIN blocks (i.e., "use") within a package are now distinguished
+    by appending the number of the line they start on.
 
 Changes to nytprofhtml:
 
